[tool.poetry]
name = "gupy-target-iceberg"
version = "0.0.1"
description = "Singer target for Iceberg, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Lorran Rodrigues <lorran.rodr@gmail.com>"]
keywords = [
    "ELT",
    "Iceberg",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "Apache-2.0"
packages = [
    { include = "target_iceberg" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
singer-sdk = { version="~=0.39.0" }
fs-s3fs = { version = "~=1.1.1", optional = true }
requests = "~=2.32.3"
pyiceberg = "^0.7.0"
pyarrow = "^17.0.0"
meltano = "^3.5.0"
pydantic = "2.6.1"

[tool.poetry.dev-dependencies]
pytest = ">=8"
singer-sdk = { version="~=0.39.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.ruff]
src = ["target_iceberg"]
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["target_iceberg"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core==1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-iceberg = 'target_iceberg.target:TargetIceberg.cli'

[tool.pytest.ini_options]
addopts = [
    "--deselect=tests/test_core.py::TestTargetIceberg::test_target_special_chars_in_attributes",
    "--deselect=tests/test_core.py::TestTargetIceberg::test_target_schema_updates",
    "--deselect=tests/test_core.py::TestTargetIceberg::test_target_encoded_string_data"
]
